# OpenJK

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
.github/workflows/: build-windows.yml  build.yml
CMakeModules/: BuildOptions.cmake  CompilerFlags.cmake  GlobalDefinitions.cmake  PlatformDefinitions.cmake
cmake/Modules/: InstallConfig.cmake
code/: CMakeLists.txt
code/cgame/: FxScheduler.cpp
code/client/: cl_main.cpp  snd_dma.cpp  snd_local.h  snd_mem.cpp
code/game/: CMakeLists.txt  q_shared.h
code/icarus/: IcarusImplementation.cpp
code/qcommon/: common.cpp  cvar.cpp  qcommon.h  z_memman_pc.cpp
code/rd-vanilla/: CMakeLists.txt
code/rd-vanilla/ghoul2/: G2_misc.cpp
code/server/: sv_game.cpp
codeJK2/cgame/: cg_main.cpp
codeJK2/game/: CMakeLists.txt  g_local.h  g_spawn.cpp
codemp/: CMakeLists.txt
codemp/botlib/: CMakeLists.txt
codemp/cgame/: CMakeLists.txt
codemp/client/: cl_main.cpp  cl_parse.cpp  snd_dma.cpp  snd_local.h  snd_openal.cpp  snd_openal_eax.cpp
codemp/game/: CMakeLists.txt
codemp/rd-common/: tr_public.h  tr_types.h
codemp/rd-cookie-dough/: CMakeLists.txt  glad.c  glad.h  tr_WorldEffects.cpp  tr_arb.cpp  tr_backend.cpp  tr_bsp.cpp  tr_buffers.cpp  tr_buffers.h  tr_glsl.cpp  tr_glsl.h  tr_gpucontext.cpp  tr_gpucontext.h  tr_image.cpp  tr_init.cpp  tr_local.h  tr_quicksprite.cpp  tr_shade.cpp  tr_shader.cpp  tr_sky.cpp  tr_surface.cpp
codemp/rd-rend2/: CMakeLists.txt  qgl.h  tr_allocator.h  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_extensions.cpp  tr_extramath.cpp  tr_extramath.h  tr_fbo.cpp  tr_flares.cpp  tr_ghoul2.cpp  tr_glsl.cpp  tr_glsl_parse.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shader2glsl.cpp  tr_sky.cpp  tr_steroids_backend.cpp  tr_steroids_backend.h  tr_steroids_cmd.cpp  tr_steroids_cmd.h  tr_steroids_debug.cpp  tr_steroids_debug.h  tr_steroids_frame.cpp  tr_steroids_frame.h  tr_steroids_math.cpp  tr_steroids_math.h  tr_steroids_render.cpp  (+6 more)
codemp/rd-rend2/glsl/: deferred_lightgrid_fp.glsl  deferred_lightgrid_vp.glsl  deferred_pointlight_fp.glsl  deferred_pointlight_vp.glsl  dlight.glsl  fogpass.glsl  generic.glsl  generic_fp.glsl  generic_vp.glsl  lightall.glsl  lightall_fp.glsl  lightall_vp.glsl  refraction.glsl  shadowfill.glsl  ssao.glsl  tonemap.glsl
codemp/rd-strawberry/: CMakeLists.txt  README.md  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_ghoul2.cpp  tr_gpu.cpp  tr_gpu.h  tr_image.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_vertex_formats.cpp  tr_vertex_formats.h  tr_world.cpp
codemp/rd-strawberry-proto/: CMakeLists.txt  qgl.h  tr_backend.cpp  tr_bsp.cpp  tr_ghoul2.cpp  tr_init.cpp  tr_local.h  tr_shade.cpp  tr_shade_calc.cpp
codemp/rd-strawberry/glsl/: compile_shaders.sh  render.frag  render.vert
codemp/rd-vanilla/: CMakeLists.txt
codemp/renderer/: tr_types.h
codemp/server/: server.h  sv_client.cpp  sv_init.cpp  sv_main.cpp
codemp/ui/: CMakeLists.txt
codemp/win32/: win_glimp.cpp
lib/jpeg-9a/: CMakeLists.txt
lib/libpng/: CMakeLists.txt
lib/minizip/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
scripts/travis/: build.sh  install.sh
shared/client/: snd_openal.cpp  snd_openal_eax.cpp  snd_openal_eax.h
shared/qcommon/: q_math.c  q_math.h
shared/sdl/: sdl_sound.cpp  sdl_window.cpp
shared/sys/: sys_public.h
tests/: CMakeLists.txt
tools/Assimilate/: Assimilate.sln  Assimilate.vcxproj  Assimilate.vcxproj.filters
tools/ModView/: CMakeLists.txt  ChangeFloor.ui  ChangeFloorDialog.cpp  ChangeFloorDialog.h  GUIHelpers.cpp  GUIHelpers.h  GenericParser2.cpp  GenericParser2.h  ISceneTreeItemVisitor.h  Main.cpp  MainForm.cpp  MainForm.h  MainForm.ui  ModView.qrc  ModView.vcxproj  ModView.vcxproj.filters  RenderWidget.cpp  RenderWidget.h  SceneTreeItem.cpp  SceneTreeItem.h  SceneTreeItemAction.cpp  SceneTreeItemAction.h  SceneTreeModel.cpp  SceneTreeModel.h  SceneTreeView.cpp  SceneTreeView.h  Splash.cpp  Splash.h  StringUtils.cpp  StringUtils.h  anims.cpp  anims.h  clipboard.cpp  clipboard.h  commarea.cpp  commarea.h  common_headers.h  files.cpp  files.h  generic_stuff.cpp  (+60 more)
tools/ModView/commtest/: StdAfx.h  wintalk.cpp
tools/ModView/jpeg6/: CMakeLists.txt  jpeglib.h
tools/ModView/png/: png.cpp  png.h
tools/ModView/res/: new_icon.xcf
tools/ModView/zlib/: CMakeLists.txt
